fix: x-scrolling on iPhone SE

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,6 +19,7 @@ body {
     position: absolute; 
     top: 100px; 
     padding-top: 0 !important; 
+    overflow-x: hidden;
     overflow-y: scroll; 
     height: 100vh; 
     padding-bottom: 100px !important;
